Updated etl.py, docs

--- a/Project 1. PostgreSQL/etl.ipynb
+++ b/Project 1. PostgreSQL/etl.ipynb
@@ -56,6 +56,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<connection object at 0x7f7e13a562a8; dsn: 'user=student password=xxx dbname=sparkifydb host=127.0.0.1', closed: 0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "editable": true
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -83,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -94,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -105,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -116,7 +138,7 @@
        "(71, 10)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -258,7 +280,7 @@
        "0  SOFCHDR12AB01866EF                    Living Hell     0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
